fix slides html

--- a/files/lectures/06-NSO-Memoria-Arquivos.html
+++ b/files/lectures/06-NSO-Memoria-Arquivos.html
@@ -237,7 +237,7 @@ arr-&gt;len++;
 <li>Cada processo é encapsulado (não tem acesso à memória de outro processo)</li>
 <li>Penalidades: hardware e software adicionais necessários, tempo extra gasto ao acessar a memória</li>
 </ul>
-<p><img src="https://github.com/open-education-hub/operating-systems/blob/main/content/data/lecture/media/VM-1.svg" alt="center  Memória Virtual" style="height:250px;" /><br />
+<p><img src="https://raw.githubusercontent.com/open-education-hub/operating-systems/refs/heads/main/content/data/lecture/media/VM-1.svg" alt="center  Memória Virtual" style="height:250px;" /><br />
 Fonte da Imagem: <a href="https://github.com/open-education-hub/operating-systems/blob/main/content/data/lecture/media/VM-1.svg">OER OS</a></p>
 <footer>PUC-Campinas | Prof. Dr. Denis Martins | <a href="mailto:denis.mayr@puc-campinas.edu.br">denis.mayr@puc-campinas.edu.br</a></footer>
 </section>
