--- a/files/lectures/04-SC-OS-Multitarefa.html
+++ b/files/lectures/04-SC-OS-Multitarefa.html
@@ -22,7 +22,7 @@ Prof. Dr. Denis M. L. Martins</p>
 <ul>
 <li>Explicar conceitos e relações entre programa, processo, thread e multitarefa.</li>
 <li>Compreender a diferenças entre threads e processos.</li>
-<li>Entender os estados de uma processo.</li>
+<li>Entender os estados de processos/threads.</li>
 </ul>
 <footer>PUC-Campinas | Prof. Dr. Denis Martins | <a href="mailto:denis.mayr@puc-campinas.edu.br">denis.mayr@puc-campinas.edu.br</a></footer>
 </section>
